tests/paczka1/small_fuzzy/45060684.err
Error in line 5: 4KLH1 S18 31,1
Error in line 6: 4KLH1 A628 34,5
Error in line 3: S18 A628 3,3
Error in line 11: SLtDBPPf A145 95,8
